--- a/team/index.html
+++ b/team/index.html
@@ -51,8 +51,8 @@
             <div>
               <tr-retning-header-content-image>
                 <img
-                  src="/images/politiapp.svg"
-                  alt="Politimann som trykker på mobiltelefon, mens smilende dame med kaffekopp og en mann venter"
+                  src="/images/Illustrasjon-team.svg"
+                  alt="En dame fremviser en presentasjon. En mann med en mobiltelefon og en dame med kaffekopp ser på."
                 />
               </tr-retning-header-content-image>
               <p style="margin-bottom: 1rem">
