fix(frontpage): bruk pil svg istedenfor html entity pga ikke støtte på iOS

--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@
               <a class="text-before-link-arrow" href="/team"
                 >Vi jobber sammen i TEAM som</a
               >
-              <a href="/team" style="text-decoration: none">🡒</a>
+              <a href="/team" style="text-decoration: none">
+                <tr-arrow></tr-arrow>
+              </a>
             </p>
             <ul>
               <li>er trygge</li>
@@ -351,7 +353,9 @@
               <a class="text-before-link-arrow" href="/teknologi"
                 >Vi sikrer at vår teknologi er</a
               >
-              <a href="/teknologi" style="text-decoration: none">🡒</a>
+              <a href="/teknologi" style="text-decoration: none">
+                <tr-arrow></tr-arrow
+              ></a>
             </p>
             <ul>
               <li>løst koblet</li>
@@ -375,7 +379,9 @@
             <a class="text-before-link-arrow" href="/folk"
               >Du og jeg er FOLK i PIT</a
             >
-            <a href="/folk" style="text-decoration: none">🡒</a>
+            <a href="/folk" style="text-decoration: none">
+              <tr-arrow></tr-arrow
+            ></a>
           </p>
           <div style="display: flex; flex-wrap: wrap; gap: 3rem">
             <ul>
