fix(team): skjult lenke "Hvordan gjøre brukerintervjuer"

--- a/team/index.html
+++ b/team/index.html
@@ -393,7 +393,7 @@
             <li>
               <a href="/brukeropplevelse">Retning for brukeropplevelse</a>
             </li>
-            <li><a href="">Hvordan gjøre brukerintervjuer</a></li>
+            <!--<li><a href="">Hvordan gjøre brukerintervjuer</a></li>-->
           </ul>
         </tr-verktoykasse-body>
       </tr-verktoykasse-content>
