--- a/brukeropplevelse/index.html
+++ b/brukeropplevelse/index.html
@@ -72,7 +72,7 @@
                 />
               </tr-prinsipp-bilde>
               <tr-prinsipp-innhold>
-                <h3 style="margin-bottom: 1rem">Trygt og tillitsvekkende</h3>
+                <h3 style="margin-bottom: 1rem">Trygt og tillitvekkende</h3>
                 <p style="margin-bottom: 1rem">
                   Politiet er troverdige og evner å ivareta behov på tvers for å
                   lage et trygt samfunn for alle.
