--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           </p>
           <div class="section-1-text-cols-container">
             <p>
-              <strong>trygge og tillitsvekkende</strong><br />
+              <strong>trygge og tillitvekkende</strong><br />
               Politiet er troverdige og evner å ivareta behov på tvers for å
               lage et trygt samfunn for alle
             </p>
