fix(folk): header bildet er gjort mindre

--- a/folk/index.html
+++ b/folk/index.html
@@ -52,7 +52,7 @@
               </p>
             </div>
           </tr-retning-header-content>
-          <tr-retning-header-image data-only-desktop="true">
+          <tr-retning-header-image data-only-desktop="true" data-size="small">
             <img
               src="/images/Illustrasjon-folk.svg"
               alt="Mann og dame ser på et nettbrett. Mannen holder nettbrettet og damen holder en kaffekopp."
