--- a/teknologi/index.html
+++ b/teknologi/index.html
@@ -47,11 +47,14 @@
               </p>
             </div>
           </tr-retning-header-content>
-          <tr-retning-header-image data-no-grow="true" data-only-desktop="true">
+          <tr-retning-header-image
+            data-no-grow="true"
+            data-only-desktop="true"
+            data-size="small"
+          >
             <img
               src="/images/Illustrasjon-tech.svg"
               alt="Dame sitter og ser på en skjerm."
-              style="width: 25rem"
             />
           </tr-retning-header-image>
         </tr-retning-header>
