fix(forside): aria-hidden og tabindex -1 for pil-lenker

--- a/index.html
+++ b/index.html
@@ -327,7 +327,12 @@
               <a class="text-before-link-arrow" href="/team"
                 >Vi jobber sammen i TEAM som</a
               >
-              <a href="/team" style="text-decoration: none">
+              <a
+                href="/team"
+                style="text-decoration: none"
+                aria-hidden="true"
+                tabindex="-1"
+              >
                 <tr-arrow></tr-arrow>
               </a>
             </p>
@@ -353,7 +358,12 @@
               <a class="text-before-link-arrow" href="/teknologi"
                 >Vi sikrer at vår teknologi er</a
               >
-              <a href="/teknologi" style="text-decoration: none">
+              <a
+                href="/teknologi"
+                style="text-decoration: none"
+                aria-hidden="true"
+                tabindex="-1"
+              >
                 <tr-arrow></tr-arrow
               ></a>
             </p>
@@ -379,7 +389,12 @@
             <a class="text-before-link-arrow" href="/folk"
               >Du og jeg er FOLK i PIT</a
             >
-            <a href="/folk" style="text-decoration: none">
+            <a
+              href="/folk"
+              style="text-decoration: none"
+              aria-hidden="true"
+              tabindex="-1"
+            >
               <tr-arrow></tr-arrow
             ></a>
           </p>
